--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/main_menu"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/bottomNavigationView"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/menu"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
     <FrameLayout
-            android:layout_width="395dp"
-            android:layout_height="659dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" android:id="@+id/frame">
+            app:layout_constraintBottom_toTopOf="@+id/menu" android:id="@+id/frame">
 
     </FrameLayout>
 
