--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -17,7 +17,7 @@
             app:layout_constraintTop_toBottomOf="@+id/messagesView"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/sendButton"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/menu"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/main_menu"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/bottomNavigationView"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/menu"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
 
