--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -10,7 +10,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/bookCover"
+            android:id="@+id/bookCoverInput"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="book cover"
@@ -23,10 +23,10 @@
             android:id="@+id/bookTitle"
             tools:text="title"
             android:layout_weight="2"
-            app:layout_constraintStart_toEndOf="@+id/bookCover"
+            app:layout_constraintStart_toEndOf="@+id/bookCoverInput"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/bookCover"
-            app:layout_constraintTop_toTopOf="@+id/bookCover"
+            app:layout_constraintBottom_toBottomOf="@+id/bookCoverInput"
+            app:layout_constraintTop_toTopOf="@+id/bookCoverInput"
             app:layout_constraintEnd_toEndOf="parent"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
