--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -14,6 +14,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="book cover"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
