--- a/app/src/main/res/layout/fragment_create_book.xml
+++ b/app/src/main/res/layout/fragment_create_book.xml
@@ -8,26 +8,27 @@
                                                    android:padding="@dimen/outerPaddddding">
 
     <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create new book"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/textView4"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/bookNameInputLayout"
+            app:layout_constraintBottom_toTopOf="@+id/coverImagePreview"
             app:layout_constraintVertical_chainStyle="packed" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/bookNameInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toTopOf="@+id/imgUrlInputLayout">
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/abortButton"
+            app:layout_constraintTop_toBottomOf="@+id/coverImagePreview">
         <EditText
                 android:id="@+id/bookTitleInput"
                 android:inputType="text"
@@ -38,24 +39,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/imgUrlInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/bookNameInputLayout"
-            app:layout_constraintBottom_toTopOf="@+id/saveBookButton">
-        <EditText
-                android:id="@+id/imgUrlInput"
-                android:inputType="textUri"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Cover image Url"
-
-        />
-    </com.google.android.material.textfield.TextInputLayout>
     <Button
             android:text="Abort"
             android:layout_width="wrap_content"
@@ -73,5 +56,35 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/abortButton"
             android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Borderless"/>
+    <de.frejasundalexchat.dritterchat.view.RoundedCornersImageView
+            android:layout_height="200dp"
+            android:background="#ddd"
+            android:id="@+id/coverImagePreview"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"
+            android:foreground="?attr/selectableItemBackground"
+            android:layout_width="200dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/bookNameInputLayout"
+            android:layout_marginBottom="8dp"/>
+    <ImageView
+            android:src="@drawable/add_picture"
+            android:layout_width="100dp"
+            android:layout_height="100dp" android:id="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/coverImagePreview"
+            app:layout_constraintTop_toTopOf="@+id/coverImagePreview"
+            app:layout_constraintEnd_toEndOf="@+id/coverImagePreview"
+            app:layout_constraintStart_toStartOf="@+id/coverImagePreview" android:alpha="0.2"
+    />
+    <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="?attr/selectableItemBackgroundBorderless" android:id="@+id/backArrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
+            app:layout_constraintDimensionRatio="w,1:1" app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:srcCompat="@drawable/caret_left" android:scaleType="fitCenter"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
