--- a/app/src/main/res/layout/fragment_create_book.xml
+++ b/app/src/main/res/layout/fragment_create_book.xml
@@ -1,90 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   tools:context=".bookOverview.CreateBookFragment"
-                                                   android:padding="@dimen/outerPaddddding">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".bookOverview.CreateBookFragment"
+        android:paddingLeft="@dimen/outerPaddddding"
+        android:paddingTop="@dimen/outerPaddddding"
+        android:paddingRight="@dimen/outerPaddddding"
+>
+
+    <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:id="@+id/backArrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView4"
+            app:layout_constraintBottom_toBottomOf="@+id/textView4"
+            app:layout_constraintDimensionRatio="w,1:1"
+            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:srcCompat="@drawable/caret_left"
+            android:scaleType="fitCenter"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create new book"
+            android:text="@string/create_new_book_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/textView4"
-            app:layout_constraintBottom_toTopOf="@+id/coverImagePreview"
-            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/bookNameInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/abortButton"
-            app:layout_constraintTop_toBottomOf="@+id/coverImagePreview">
-        <EditText
-                android:id="@+id/bookTitleInput"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Name"
-        />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/contentScroll"
+            app:layout_constraintVertical_bias="0.0"/>
 
-
-    <Button
-            android:text="Abort"
-            android:layout_width="wrap_content"
-            android:layout_height="49dp" android:id="@+id/abortButton"
-            app:layout_constraintBottom_toBottomOf="@+id/saveBookButton"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/saveBookButton"
-            app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toTopOf="@+id/saveBookButton" style="@style/Widget.AppCompat.Button.Borderless"
-            android:textColor="#E91E63"/>
-    <Button
-            android:text="Save"
-            android:layout_width="wrap_content"
-            android:layout_height="49dp" android:id="@+id/saveBookButton"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/abortButton"
-            android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Borderless"/>
-    <de.frejasundalexchat.dritterchat.view.RoundedCornersImageView
-            android:layout_height="200dp"
-            android:background="#ddd"
-            android:id="@+id/coverImagePreview"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"
-            android:foreground="?attr/selectableItemBackground"
-            android:layout_width="200dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/bookNameInputLayout"
-            android:layout_marginBottom="8dp"/>
-    <ImageView
-            android:src="@drawable/add_picture"
-            android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/coverImagePreview"
-            app:layout_constraintTop_toTopOf="@+id/coverImagePreview"
-            app:layout_constraintEnd_toEndOf="@+id/coverImagePreview"
-            app:layout_constraintStart_toStartOf="@+id/coverImagePreview" android:alpha="0.2"
-    />
-    <ImageButton
+    <ScrollView
+            android:id="@+id/contentScroll"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="?attr/selectableItemBackgroundBorderless" android:id="@+id/backArrow"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
-            app:layout_constraintDimensionRatio="w,1:1" app:layout_constraintEnd_toStartOf="@+id/textView4"
-            app:srcCompat="@drawable/caret_left" android:scaleType="fitCenter"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintBottom_toTopOf="@+id/abortButton">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <include
+                    layout="@layout/create_image_button"
+                    android:layout_gravity="center"
+                    android:layout_height="200dp"
+                    android:layout_width="200dp"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/bookTitleInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+                <EditText
+                        android:id="@+id/titleInput"
+                        android:inputType="text|textMultiLine"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/create_book_title_hint"
+                />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/bookAuthorInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+                <EditText
+                        android:id="@+id/authorInput"
+                        android:inputType="text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/create_book_author_hint"
+                />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/pageCountInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+                <EditText
+                        android:id="@+id/pageCountInput"
+                        android:inputType="number"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/create_book_page_count_hint"
+                />
+
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/notesInputLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="0dp">
+                    <EditText
+                            android:id="@+id/notesInput"
+                            android:inputType="text|textMultiLine"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/create_book_notes"
+                    />
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+            android:id="@+id/abortButton"
+            android:text="@string/create_book_abort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/saveBookButton"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/saveBookButton"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="@+id/saveBookButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="#E91E63"/>
+    <Button
+            android:id="@+id/saveBookButton"
+            android:text="@string/create_book_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/abortButton"
+            android:layout_marginStart="8dp"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
