--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -1,33 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:orientation="horizontal"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content">
+<com.google.android.material.card.MaterialCardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/mtrl_card_spacing"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="@dimen/mtrl_card_spacing"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp"
+        app:cardBackgroundColor="#F5F5F6"
+>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+    >
 
-    <de.frejasundalexchat.dritterchat.view.RoundedCornersImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/bookCoverInput"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="book cover"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+                tools:srcCompat="@tools:sample/avatars"
+                android:id="@+id/bookCoverInput"
+                app:layout_constraintStart_toStartOf="parent"
+                android:scaleType="centerCrop"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_weight="2"
+                android:background="#ddd"
+                android:layout_height="100dp"
+                android:layout_width="0dp"
+                app:layout_constraintDimensionRatio="h,1:1"
+        />
 
-    <TextView
-            android:gravity="center_vertical"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/bookTitle"
-            tools:text="title"
-            android:layout_weight="2"
-            app:layout_constraintStart_toEndOf="@+id/bookCoverInput"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/bookCoverInput"
-            app:layout_constraintTop_toTopOf="@+id/bookCoverInput"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:id="@+id/bookAuthor"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                tools:text="Freja und alex"
+                app:layout_constraintStart_toStartOf="@+id/bookTitle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bookTitle"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toTopOf="@+id/totalPageCount"
+        />
+        <TextView
+                android:id="@+id/totalPageCount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="399"
+                app:layout_constraintStart_toStartOf="@+id/bookTitle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bookAuthor"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toTopOf="@+id/theLine"
+        />
+        <TextView
+                android:id="@+id/bookTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="Harry Potter"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/bookCoverInput"
+                android:layout_marginStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toTopOf="@+id/bookAuthor"
+        />
+        <View android:layout_width="match_parent"
+              android:layout_height="1dp"
+              android:background="@color/colorPrimaryDark"
+              app:layout_constraintBottom_toTopOf="@+id/imageView3"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              android:id="@+id/theLine"
+              app:layout_constraintTop_toBottomOf="@+id/bookCoverInput"/>
+        <ImageButton
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                app:srcCompat="@drawable/edit_icon"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:background="?attr/selectableItemBackground"
+                android:id="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintHorizontal_bias="0.5"
+        />
+        <ImageButton
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                app:srcCompat="@drawable/delete_ic"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:background="?attr/selectableItemBackground"
+                android:id="@+id/imageView3"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintHorizontal_bias="1.0"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
