--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="colorMessage">#F07</color>
+    <color name="colorPrimary">#82ada9</color>
+    <color name="colorPrimaryDark">#547e7a</color>
+    <color name="colorPrimaryLight">#b2dfdb</color>
+    <color name="colorAccent">#f5f5f5</color>
+    <color name="colorMessage">#f5f5f5</color>
+    <color name="colorSecondary">#81c784</color>
+    <color name="colorSecondaryDark">#519657</color>
+    <color name="colorSecondaryLight">#b2fab4</color>
+
+    <color name="colorPrimaryText">#37474f</color>
+
 </resources>
