add AddBook Button to menu bar

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,6 +13,13 @@
           android:id="@+id/all"
           app:showAsAction="always"
     />
+
+    <item android:title="add"
+          android:icon="@drawable/ic_add"
+          android:id="@+id/add"
+          app:showAsAction="always"
+    />
+
     <item android:title="current"
           android:icon="@drawable/ic_current_24dp"
           app:showAsAction="always"
