--- a/app/src/main/res/layout/fragment_create_book.xml
+++ b/app/src/main/res/layout/fragment_create_book.xml
@@ -68,6 +68,8 @@
                     android:layout_marginBottom="8dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                 <com.google.android.material.textfield.TextInputEditText
+                        android:drawableStart="@drawable/ic_current_24dp"
+                        android:drawablePadding="10dp"
                         android:id="@+id/titleInput"
                         android:inputType="text|textMultiLine"
                         android:layout_width="match_parent"
