--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -11,7 +11,8 @@
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp"
         app:cardBackgroundColor="#F5F5F6"
->
+        tools:layout_width="200dp"
+        android:id="@+id/materialCardView">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -26,16 +27,31 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_weight="2"
                 android:background="#ddd"
-                android:layout_height="100dp"
+                android:layout_height="0dp"
                 android:layout_width="0dp"
-                app:layout_constraintDimensionRatio="h,1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintDimensionRatio="w,5:4"
+        />
+
+        <TextView
+                android:id="@+id/bookTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                tools:text="Harry Potter"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/bookAuthor"
+                app:layout_constraintTop_toBottomOf="@+id/bookCoverInput" app:layout_constraintStart_toStartOf="parent"
         />
 
         <TextView
                 android:id="@+id/bookAuthor"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 tools:text="Freja und alex"
                 app:layout_constraintStart_toStartOf="@+id/bookTitle"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +59,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintBottom_toTopOf="@+id/totalPageCount"
         />
+
         <TextView
                 android:id="@+id/totalPageCount"
                 android:layout_width="0dp"
@@ -51,59 +68,10 @@
                 app:layout_constraintStart_toStartOf="@+id/bookTitle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bookAuthor"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintBottom_toTopOf="@+id/theLine"
-        />
-        <TextView
-                android:id="@+id/bookTitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                tools:text="Harry Potter"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/bookCoverInput"
-                android:layout_marginStart="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintBottom_toTopOf="@+id/bookAuthor"
-        />
-        <View android:layout_width="match_parent"
-              android:layout_height="1dp"
-              android:background="@color/colorPrimaryDark"
-              app:layout_constraintBottom_toTopOf="@+id/imageView3"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintEnd_toEndOf="parent"
-              android:id="@+id/theLine"
-              app:layout_constraintTop_toBottomOf="@+id/bookCoverInput"/>
-        <ImageButton
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                app:srcCompat="@drawable/edit_icon"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                android:background="?attr/selectableItemBackground"
-                android:id="@+id/imageView2"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
                 app:layout_constraintHorizontal_bias="0.5"
+                android:layout_marginBottom="8dp"
         />
-        <ImageButton
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                app:srcCompat="@drawable/delete_ic"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                android:background="?attr/selectableItemBackground"
-                android:id="@+id/imageView3"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                app:layout_constraintHorizontal_bias="1.0"
-        />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
