--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/book"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -24,7 +25,9 @@
             android:layout_width="0dp"
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintBottom_toTopOf="@id/hr"
-            android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+    />
 
     <TextView
             android:id="@+id/bookTitle"
